--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# Logs
-logs
-*.log
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -9,8 +7,6 @@ lerna-debug.log*
 
 node_modules/
 public/
-dist/
-dist-ssr
 *.local
 
 # Editor directories and files
