--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.91.0",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/fiber": "^8.15.15",
     "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.159.0",
     "gltfjsx": "^6.2.15",
     "gsap": "^3.12.4",
+    "install": "^0.13.0",
     "leva": "^0.9.35",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-three-third-person": "^0.4.6",
     "stats.js": "^0.17.0",
-    "three": "^0.159.0",
-    "three-stdlib": "^2.28.9"
+    "three": "^0.160.1",
+    "three-stdlib": "^2.28.9",
+    "three-web-layer": "^2.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
