--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.91.0",
-    "@react-three/fiber": "^8.15.15",
+    "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.15.11",
+    "@react-three/rapier": "^1.2.1",
     "@types/three": "^0.159.0",
     "gltfjsx": "^6.2.15",
     "gsap": "^3.12.4",
@@ -27,7 +28,8 @@
     "stats.js": "^0.17.0",
     "three": "^0.160.1",
     "three-stdlib": "^2.28.9",
-    "three-web-layer": "^2.0.13"
+    "three-web-layer": "^2.0.13",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
