카드 출력 1차

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.2.1",
     "@types/three": "^0.159.0",
+    "cannon-es-debugger": "^1.0.0",
+    "ecctrl": "^1.0.64",
     "gltfjsx": "^6.2.15",
     "gsap": "^3.12.4",
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "npm": "^10.4.0",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-three-third-person": "^0.4.6",
