--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "rollup-plugin-copy": "^3.5.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-copy": "^0.1.6"
   }
 }
