--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ecctrl": "^1.0.64",
     "gltfjsx": "^6.2.15",
     "gsap": "^3.12.4",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
