--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.12.0",
+    "@dimforge/rapier3d-compat": "^0.12.0",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.91.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.2.1",
+    "@tweenjs/tween.js": "^23.1.1",
     "@types/three": "^0.159.0",
     "cannon-es-debugger": "^1.0.0",
     "ecctrl": "^1.0.64",
@@ -33,6 +36,7 @@
     "three": "^0.160.1",
     "three-stdlib": "^2.28.9",
     "three-web-layer": "^2.0.13",
+    "vite-plugin-wasm": "^3.3.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
