--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@dimforge/rapier3d": "^0.12.0",
     "@dimforge/rapier3d-compat": "^0.12.0",
+    "@gltf-transform/core": "^3.10.0",
+    "@gltf-transform/extensions": "^3.10.0",
+    "@gltf-transform/functions": "^3.10.0",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.91.0",
     "@react-three/fiber": "^8.15.16",
@@ -27,7 +30,7 @@
     "install": "^0.13.0",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
-    "npm": "^10.4.0",
+    "npm": "^10.5.0",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
