--- a/package.json
+++ b/package.json
@@ -15,26 +15,33 @@
     "@gltf-transform/core": "^3.10.0",
     "@gltf-transform/extensions": "^3.10.0",
     "@gltf-transform/functions": "^3.10.0",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.91.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.3.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@tweenjs/tween.js": "^23.1.1",
     "@types/three": "^0.159.0",
+    "axios": "^1.6.8",
     "cannon-es-debugger": "^1.0.0",
     "ecctrl": "^1.0.64",
     "gltfjsx": "^6.2.15",
     "gsap": "^3.12.4",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "npm": "^10.5.0",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-three-third-person": "^0.4.6",
+    "redux": "^5.0.1",
     "stats.js": "^0.17.0",
     "styled-components": "^6.1.8",
     "three": "^0.160.1",
