--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
