--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "@tweenjs/tween.js": "^23.1.1",
     "@types/three": "^0.159.0",
     "axios": "^1.6.8",
     "cannon-es-debugger": "^1.0.0",
@@ -37,6 +36,7 @@
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "npm": "^10.5.0",
+    "qrcode.react": "^3.1.0",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,10 +48,12 @@
     "three": "^0.160.1",
     "three-stdlib": "^2.28.9",
     "three-web-layer": "^2.0.13",
+    "typed.js": "^2.1.0",
     "vite-plugin-wasm": "^3.3.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@tweenjs/tween.js": "^23.1.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
